--- a/node-microservice/package.json
+++ b/node-microservice/package.json
@@ -6,12 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "latest",
+    "body-parser": "latest",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "eureka-js-client": "^4.4.1",
     "express": "~4.16.1",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "latest",
+    "mongodb": "^3.3.3",
+    "mongoose": "^5.7.9",
     "morgan": "~1.9.1",
-    "twig": "~0.10.3",
-    "eureka-js-client": "^4.4.1"
+    "twig": "~0.10.3"
   }
 }
