Human ressources microsrvice with some services

--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -10,3 +10,6 @@ zuul.host.socket-timeout-millis: 30000
 #zuul.routes.Job-service.path=/Job-service/*
 #zuul.routes.Job-service.serviceId=Job-service
 
+zuul.routes.hr-service.path=/hr-service/*
+zuul.routes.hr-service.serviceId=hr-service
+
