Materials micro service and update proxy

--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -13,3 +13,6 @@ zuul.host.socket-timeout-millis: 30000
 zuul.routes.hr-service.path=/hr-service/*
 zuul.routes.hr-service.serviceId=hr-service
 
+zuul.routes.materiels-service.path=/materiels-service/*
+zuul.routes.materiels-service.serviceId=materiels-service
+
