fix pom.xml and add routes to proxy

--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,8 @@
   <modules>
 		<module>APIGateway</module>
 		<module>Eureka</module>
+        <module>Ressources-Humaines</module>
+        <module>Materiels-microservice</module>
+        <module>service-project</module>
 	</modules>
 </project>
