--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -16,3 +16,9 @@ zuul.routes.hr-service.serviceId=hr-service
 zuul.routes.materiels-service.path=/materiels-service/*
 zuul.routes.materiels-service.serviceId=materiels-service
 
+zuul.routes.service-project.path=/service-project/*
+zuul.routes.service-project.serviceId=service-project
+
+zuul.routes.node-service.path=/node-service/*
+zuul.routes.node-service.serviceId=node-service
+
