--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -20,5 +20,5 @@ zuul.routes.service-project.path=/service-project/*
 zuul.routes.service-project.serviceId=service-project
 
 zuul.routes.node-service.path=/node-service/*
-zuul.routes.node-service.serviceId=node-service
+zuul.routes.node-service.url==http://localhost:3000
 
