--- a/node-microservice/package.json
+++ b/node-microservice/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.9",
     "morgan": "~1.9.1",
+    "tweetnacl": "^1.0.1",
     "twig": "~0.10.3"
   }
 }
